<resources>
    <string name="app_name">Bankme</string>
    <string name="sign_into_your_account">Sign into your Account</string>
    <string name="log_into_your_bankme_account">Log into your BankMe account</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="log_in_button">LOG IN</string>
    <string name="enter_your_phone_number">enter your phone number</string>
    <string name="enter_password">enter password</string>
    <string name="do_you_not_have_a_bankme_account_sign_up_here">Do you not have a BankMe account? Sign up here</string>
    <string name="have_you_forgotten_your_password_click_here_to_recover_it">Have you forgotten your password?, click here to recover it</string>
    <string name="mobile_data_indicator">mobile data indicator</string>
    <string name="hyperlink">  click here <a href="https://www.geeksforgeeks.org/">geeksforgeeks.org</a> to go to site</string>
    <string name="hyperlink2"><a href="https://practice.geeksforgeeks.org/">practice.geeksforgeeks.org</a></string>
    <string name="tip_text">Good morning, remember to save today</string>
    <string name="get_your_money_working_for_you">Get your money working for you</string>
    <string name="ways_to_earn_more_money">Ways to earn more money</string>
    <string name="n50_000_10">N50,000.10</string>
    <string name="total_savings">Total Savings</string>
    <string name="add_money">Add Money</string>
    <string name="withdraw_money">Withdraw money</string>
    <string name="save_for_an_emergency">Save for an emergency</string>
    <string name="invest_your_money">Invest your money</string>
    <string name="invite_your_friends_and_get_a_bonus">Invite your friends and get a bonus</string>
    <string name="savings_icon">Savings icon</string>
    <string name="invest_icon">invest_icon</string>
    <string name="amount">Amount</string>
    <string name="dollar">$</string>
    <string name="customer_name">Customer name</string>
    <string name="enter_your_name">enter your name</string>
    <string name="pin">PIN</string>
    <string name="enter_your_pin">enter your pin</string>
    <string name="withdraw">WITHDRAW</string>
    <string name="close">Close</string>
    <string name="transaction_complete_img">transaction_complete_img</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_order_for_n1_000_withdrawal_was_placed_successfully_a_text_message_will_be_sent_to_your_phone_containing_the_order_number_of_your_transaction_phone_number_and_address_of_the_nearest_agent_to_complete_your_transaction">Your order for N1,000 withdrawal was placed successfully! A text message will be sent to your phone containing the ORDER NUMBER of your transaction, phone number and address of the nearest agent to complete your transaction.</string>
</resources>