<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Transaction_confirmed_activity">


    <Space
        android:id="@+id/statusbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="9dp"
        android:layout_marginStart="25dp"
        android:format12Hour="hh:mm a"
        android:fontFamily="sans-serif-medium"
        android:textSize="15sp"
        />

    <View
        android:id="@+id/statusbar_icons_view"
        android:layout_width="200dp"
        android:layout_height="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:id="@+id/IV_mobile_data"
        android:layout_marginStart="130dp"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/mobile_data_indicator"
        android:src="@drawable/ic_mobiledata"
        app:layout_constraintEnd_toStartOf="@id/IV_wifi"
        app:layout_constraintStart_toStartOf="@+id/statusbar_icons_view"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/IV_wifi"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_wifi"
        app:layout_constraintEnd_toEndOf="@id/IV_battery"
        app:layout_constraintStart_toEndOf="@id/IV_mobile_data"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/mobile_data_indicator"
        />

    <ImageView
        android:id="@+id/IV_battery"
        android:layout_marginEnd="11dp"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_battery"
        app:layout_constraintEnd_toEndOf="@id/statusbar_icons_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/IV_wifi"
        android:layout_marginTop="9dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:contentDescription="@string/mobile_data_indicator"/>

    <ImageView
        android:id="@+id/IW_tick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statusbar"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/transaction_complete_img"
        />

    <TextView
        android:id="@+id/TW_congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/IW_tick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:text="@string/congratulations"
        />

    <TextView
        android:id="@+id/TW_descriptive_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:flow_horizontalAlign="center"
        app:layout_constraintTop_toBottomOf="@id/TW_congrats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="12sp"
        android:text="@string/your_order_for_n1_000_withdrawal_was_placed_successfully_a_text_message_will_be_sent_to_your_phone_containing_the_order_number_of_your_transaction_phone_number_and_address_of_the_nearest_agent_to_complete_your_transaction"

        />



    <Button
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintDimensionRatio="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/close"/>

</androidx.constraintlayout.widget.ConstraintLayout>