<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">


    <Space
        android:id="@+id/statusbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="9dp"
        android:layout_marginStart="25dp"
        android:format12Hour="hh:mm a"
        android:fontFamily="sans-serif-medium"
        android:textSize="15sp"
        />

    <View
        android:id="@+id/statusbar_icons_view"
        android:layout_width="200dp"
        android:layout_height="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:id="@+id/IV_mobile_data"
        android:layout_marginStart="130dp"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/mobile_data_indicator"
        android:src="@drawable/ic_mobiledata"
        app:layout_constraintEnd_toStartOf="@id/IV_wifi"
        app:layout_constraintStart_toStartOf="@+id/statusbar_icons_view"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/IV_wifi"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_wifi"
        app:layout_constraintEnd_toEndOf="@id/IV_battery"
        app:layout_constraintStart_toEndOf="@id/IV_mobile_data"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/mobile_data_indicator"
        />

    <ImageView
        android:id="@+id/IV_battery"
        android:layout_marginEnd="11dp"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_battery"
        app:layout_constraintEnd_toEndOf="@id/statusbar_icons_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/IV_wifi"
        android:layout_marginTop="9dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:contentDescription="@string/mobile_data_indicator" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/statusbar"
        android:layout_marginStart="16dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/TW_greetings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-black"
                app:layout_constraintTop_toTopOf="@id/constraintLayout"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/TW_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_text"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-light"
                android:layout_marginStart="16dp"
                android:layout_marginTop="35dp"
                app:layout_constraintTop_toTopOf="@id/TW_greetings"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_moneybag"
                app:layout_constraintStart_toEndOf="@+id/TW_tip"
                app:layout_constraintTop_toTopOf="@id/constraintLayout"
                android:layout_marginTop="35dp"
                android:layout_marginStart="5dp"/>


            <View
                android:id="@+id/savings_background"
                android:layout_width="370dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/TW_tip"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintEnd_toEndOf="@id/constraintLayout"
                android:layout_marginTop="20dp"
                android:background="@drawable/savings_background"
                />

            <View
                android:id="@+id/addmoney_background"
                android:layout_width="180dp"
                android:layout_height="60dp"
                app:layout_constraintTop_toBottomOf="@id/savings_background"
                app:layout_constraintEnd_toStartOf="@id/withdraw_background"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                android:layout_marginTop="20dp"
                android:background="@drawable/addmoney_background"
                />

            <View
                android:id="@+id/withdraw_background"
                android:layout_width="180dp"
                android:layout_height="60dp"
                app:layout_constraintTop_toBottomOf="@id/savings_background"
                app:layout_constraintStart_toEndOf="@id/addmoney_background"
                app:layout_constraintEnd_toEndOf="@id/constraintLayout"
                android:layout_marginTop="20dp"
                android:background="@drawable/withdraw_background"
                />

            <TextView
                android:id="@+id/TW_options_for_earning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_your_money_working_for_you"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-black"
                app:layout_constraintTop_toBottomOf="@id/addmoney_background"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"/>

            <View
                android:id="@+id/save_container"
                android:layout_width="378dp"
                android:layout_height="66dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_rectangle"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@id/TW_options_for_earning" />

            <View
                android:id="@+id/invest_container"
                android:layout_width="378dp"
                android:layout_height="66dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_rectangle"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@id/save_container" />

            <TextView
                android:id="@+id/TW_ways_to_earn_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ways_to_earn_more_money"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-black"
                app:layout_constraintTop_toBottomOf="@id/invest_container"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"/>

            <View
                android:id="@+id/invite_container"
                android:layout_width="378dp"
                android:layout_height="66dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_rectangle"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@id/TW_ways_to_earn_money" />







        </androidx.constraintlayout.widget.ConstraintLayout>






    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>